shifted nav down on mobile breakpoint and fixed right and left amrgins fo nav to be equal

--- a/src/content/dam/wbx/us/images/workspace/styles/_common.scss
+++ b/src/content/dam/wbx/us/images/workspace/styles/_common.scss
@@ -73,16 +73,16 @@
         ul {
           box-sizing: border-box;
           margin: 0 0 0 0;
-          padding: 20px 20px 0;
+          padding: 50px 20px 0;
           list-style: none;
           width: 100vw;
           display: flex;
+          justify-content: space-between;
 
           li {
-            margin-right: 34px;
-
             &:last-child {
               margin-right: 0;
+              text-align: right;
             }
 
             a {
